feedback from Janosch

--- a/.github/workflows/build_frontend-ng.yml
+++ b/.github/workflows/build_frontend-ng.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Frontend-NG
 on:
   push:
     branches:
-      - main # Or your main development branch
+      - master
     paths:
       - 'timesketch/frontend-ng/**'
       - '!timesketch/frontend-ng/dist/**' # Exclude changes in the dist folder
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18' # Or your preferred Node.js version
+          node-version: '20' # Or your preferred Node.js version
 
       - name: Install dependencies
         working-directory: timesketch/frontend-ng
