--- a/.github/workflows/build_frontend-ng.yml
+++ b/.github/workflows/build_frontend-ng.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Commit and push dist folder
         working-directory: timesketch/frontend-ng
         run: |
+          git remote set-url origin git@github.com:${{ github.repository }}.git
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add dist
