add some ingnore paths to the workflows so they do not trigger to safe further execution time

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,6 +2,13 @@ name: e2e-tests
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+    paths-ignore:
+      - 'docs/**'
+      - '.gitignore'
+      - 'README.md'
+      - '*.md'
+      - '*.txt'
+
 jobs:
   # OpenSearch version 1.x.x
   PyPi-plaso-stable-opensearch-v1:
