--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -8,6 +8,8 @@ on:
       - 'README.md'
       - '*.md'
       - '*.txt'
+    paths:
+      - '**/requirements.txt'
 
 jobs:
   # OpenSearch version 1.x.x
