--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -8,6 +8,8 @@ on:
       - '.gitignore'
       - 'README.md'
       - '*.md'
+    paths:
+      - '**/requirements.txt'
 
 jobs:
   # Backend tests (Python/Flask)
