--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -390,6 +390,12 @@ LLM_PROVIDER_CONFIGS = {
             'server_url': 'http://ollama:11434',
             'model': 'gemma:7b',
         },
+    },
+    'log_analyzer':
+    {
+        'arcadia': {
+            'server_url': 'http://localhost:11434'  # dummy value
+        }
     }
 }
 
