--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -342,7 +342,7 @@ SIGMA_TAG_DELAY = 5
 
 #-------------------------------------------------------------------------------
 # DFIQ - Digital Forensics Investigation Questions
-DFIQ_ENABLED = False
+DFIQ_ENABLED = True
 DFIQ_PATH = '/etc/timesketch/dfiq/'
 
 # Intelligence tag metadata configuration
