test paralell stuff

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -29,6 +29,7 @@ jobs:
           pipenv install -d
           pipenv run pip install -r test_requirements.txt
           pipenv run pip install ./cli_client/python
+          pip install pytest pytest-xdist
       - name: Check pytest installation
         run: pipenv run pip show pytest
       - name: Run unit tests
