--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ google-cloud-aiplatform==1.70.0
 gunicorn==23.0.0
 numpy==1.26.4
 oauthlib==3.1.0
-pandas==1.5.0
+pandas>=2.2.3
 PyJWT==2.4.0
 python_dateutil==2.8.1
 PyYAML==6.0.1
