Timesketch CLI and E2E Test Enhancements (#3399)
* add cli_client to run_tests.py

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -35,6 +35,7 @@ jobs:
           pip install pipenv
           pipenv install -d
           pipenv run pip install -r test_requirements.txt
+          pipenv run pip install ./cli_client/python
           pip install pytest pytest-xdist
       - name: Check pytest installation
         run: pipenv run pip show pytest
