--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -377,14 +377,14 @@ LLM_PROVIDER_CONFIGS = {
     #   $ pip3 install google-generativeai
     'nl2q': {
         'vertexai': {
-            'model': 'gemini-1.5-flash-001',
+            'model': 'gemini-2.0-flash-001',
             'project_id': '',
         },
     },
     'llm_summarize': {
         'aistudio': {
-            'model': 'gemini-2.0-flash-exp',
-            'project_id': '',
+            'model': 'gemini-2.0-flash-001',
+            'api_key': '',
         },
     },
     'default': {
