--- a/timesketch/frontend-v3/package.json
+++ b/timesketch/frontend-v3/package.json
@@ -9,13 +9,22 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
-    "core-js": "^3.37.1",
-    "dayjs": "^1.11.13",
-    "roboto-fontface": "*",
-    "vue": "^3.4.31",
-    "vuetify": "^3.6.11",
+    "@popperjs/core": "^2.11.8",
+    "apexcharts": "^4.7.0",
     "axios": "^1.8.2",
-    "tiny-emitter": "^2.1.0"
+    "core-js": "^3.37.1",
+    "cytoscape": "^3.32.0",
+    "cytoscape-dagre": "^2.5.0",
+    "dayjs": "^1.11.13",
+    "dompurify": "^3.2.5",
+    "marked": "^15.0.11",
+    "roboto-fontface": "*",
+    "tiny-emitter": "^2.1.0",
+    "v-calendar": "^3.1.2",
+    "vue": "^3.4.31",
+    "vue-dragscroll": "^4.0.6",
+    "vue3-apexcharts": "^1.8.0",
+    "vuetify": "^3.6.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
