--- a/contrib/nginx.conf
+++ b/contrib/nginx.conf
@@ -52,8 +52,21 @@ http {
             proxy_pass http://timesketch-web-legacy:5000/;
             proxy_read_timeout 120s;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+        # Uncomment if you are goind to deploy a frontend-v3 container!
+        # location /v3/ {
+        #     proxy_buffer_size 128k;
+        #     proxy_buffers 4 256k;
+        #     proxy_busy_buffers_size 256k;
+        #     proxy_pass http://timesketch-web-v3:5000/;
+        #     proxy_read_timeout 120s;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # }
     }
 }
