actually add the admin user and also add the admin user to acls of the sketch

--- a/docker/e2e/docker-compose.yml
+++ b/docker/e2e/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - REDIS_PORT=6379
       - TIMESKETCH_USER=test
       - TIMESKETCH_PASSWORD=test
+      - TIMESKETCH_ADMIN_USER=admin
+      - TIMESKETCH_ADMIN_USER_PASSWORD=admin
     build:
       context: ../../
       dockerfile: ./docker/e2e/Dockerfile
