--- a/docker/e2e/docker-compose.yml
+++ b/docker/e2e/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - REDIS_PORT=6379
       - TIMESKETCH_USER=test
       - TIMESKETCH_PASSWORD=test
+      - TIMESKETCH_USER2=test2
+      - TIMESKETCH_PASSWORD2=test2
     build:
       context: ../../
       dockerfile: ./docker/e2e/Dockerfile
