--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -377,13 +377,19 @@ LLM_PROVIDER_CONFIGS = {
     #   $ pip3 install google-generativeai
     'nl2q': {
         'vertexai': {
-            'model': 'gemini-2.0-flash-001',
+            'model': 'gemini-2.0-flash',
             'project_id': '',
         },
     },
     'llm_summarize': {
         'aistudio': {
-            'model': 'gemini-2.0-flash-001',
+            'model': 'gemini-2.0-flash',
+            'api_key': '',
+        },
+    },
+    'llm_synthesize': {
+        'aistudio': {
+            'model': 'gemini-2.0-flash',
             'api_key': '',
         },
     },
@@ -395,8 +401,11 @@ LLM_PROVIDER_CONFIGS = {
     },
     'log_analyzer':
     {
-        'arcadia': {
-            'server_url': 'http://localhost:11434'  # dummy value
+        # NOTE: This feature will not work with default LLM proiders and requires
+        # a dedicated log analyzer agent service! Read more: <TBD>
+        'secgemini_log_analyzer_agent': {
+            'server_url': '',
+            'api_key': '',
         }
     }
 }
@@ -409,6 +418,7 @@ EXAMPLES_NL2Q = '/etc/timesketch/nl2q/examples_nl2q'
 
 # LLM event summarization configuration
 PROMPT_LLM_SUMMARIZATION = '/etc/timesketch/llm_summarize/prompt.txt'
+PROMPT_LLM_SYNTHESIZE = '/etc/timesketch/llm_summarize/prompt_llm_synthesize.txt'
 
 #-------------------------------------------------------------------------------
 # Timesketch UI Option
@@ -416,3 +426,7 @@ PROMPT_LLM_SUMMARIZATION = '/etc/timesketch/llm_summarize/prompt.txt'
 # Get the search processing timelines setting.
 # If set to True, the search processing timelines options will be displayed in the UI.
 SEARCH_PROCESSING_TIMELINES = False
+
+# Enable the investigation view running on the v3 frontend.
+# Visit the following page for set-up instructions: <TBD>
+ENABLE_V3_INVESTIGATION_VIEW = False
