--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -20,6 +20,7 @@ SECRET_KEY = '<KEY_GOES_HERE>'
 # NOTE: SQLite should only be used in development. Use PostgreSQL or MySQL in
 # production.
 SQLALCHEMY_DATABASE_URI = 'postgresql://<USERNAME>:<PASSWORD>@localhost/timesketch'
+SQLALCHEMY_ENGINE_OPTIONS = {}
 
 # Configure where your OpenSearch server is located.
 #
