Fix config for multi host setup.

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -26,8 +26,7 @@ SQLALCHEMY_DATABASE_URI = 'postgresql://<USERNAME>:<PASSWORD>@localhost/timesket
 # Make sure that the OpenSearch server is properly secured and not accessible
 # from the internet. See the following link for more information:
 # https://opensearch.org/docs/latest/getting-started/security/
-OPENSEARCH_HOST = '127.0.0.1'
-OPENSEARCH_PORT = 9200
+OPENSEARCH_HOSTS = [{"host": "opensearch", "port": 9200}]
 OPENSEARCH_USER = None
 OPENSEARCH_PASSWORD = None
 OPENSEARCH_SSL = False
