update links in timesketch.conf

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -401,7 +401,8 @@ LLM_PROVIDER_CONFIGS = {
     'log_analyzer':
     {
         # NOTE: This feature will not work with default LLM proiders and requires
-        # a dedicated log analyzer agent service! Read more: <TBD>
+        # a dedicated log analyzer agent service!
+        # Read more: https://timesketch.org/developers/log-analyzer-agent/
         'secgemini_log_analyzer_agent': {
             'server_url': '',
             'api_key': '',
@@ -427,5 +428,5 @@ PROMPT_LLM_SYNTHESIZE = '/etc/timesketch/llm_summarize/prompt_llm_synthesize.txt
 SEARCH_PROCESSING_TIMELINES = False
 
 # Enable the investigation view running on the v3 frontend.
-# Visit the following page for set-up instructions: <TBD>
+# Set-up instructions: https://timesketch.org/guides/admin/investigation-view-setup/
 ENABLE_V3_INVESTIGATION_VIEW = False
