--- a/.pylintrc
+++ b/.pylintrc
@@ -461,6 +461,7 @@ confidence=HIGH,
 # --disable=W".
 disable=assignment-from-none,
         bad-inline-option,
+        broad-except,
         cyclic-import,
         deprecated-pragma,
         duplicate-code,
