Investigation View Project
This commit introduces the Investigation View, a new V3 frontend dedicated to structured, question-driven analysis. It provides a formal workflow for analysts to track investigative questions, document conclusions with supporting evidence, and generate reports. This is accompanied by new AI capabilities for automated analysis and summarization.

**Investigation View (V3 Frontend)**

-   A new Vue 3 application is added under `/v3/`, enabled by the `ENABLE_V3_INVESTIGATION_VIEW` configuration flag.
-   The UI consists of a main "Report View" for summaries and key findings, and a detailed "Results View" for managing individual questions, conclusions, and linked events.
-   Core functionalities include creating/managing investigative questions, adding analyst conclusions, and linking specific events as "facts" to support those conclusions.

**AI & LLM Features**

-   **Log Analyzer:** A new `llm_log_analyzer` analyzer is introduced. It streams all sketch events to a dedicated external agent service which performs analysis and returns generated questions and conclusions. This provides an automated starting point for investigations.
-   **Answer Synthesis:** A new `llm_synthesize` feature is added. It takes all conclusions for a given question and uses an LLM to generate a concise, narrative answer suitable for a final report.

**Backend & API Changes**

-   **LLM Resource Refactoring:** The primary LLM API endpoint (`/api/v1/llm`) is refactored to support a more robust, feature-driven architecture. It now handles feature-specific execution paths, including support for streaming input/output required by the Log Analyzer, while maintaining backward compatibility for existing non-streaming features. Error handling and metrics are also improved.
-   **Investigative Question API:** The API now supports `POST` requests to `/sketches/<id>/questions/<id>/`, allowing for updates to a question's status (e.g., 'new', 'verified'), priority, name, and desc

--- a/timesketch/frontend-v3/package.json
+++ b/timesketch/frontend-v3/package.json
@@ -15,8 +15,10 @@
     "core-js": "^3.37.1",
     "cytoscape": "^3.32.0",
     "cytoscape-dagre": "^2.5.0",
+    "cytoscape-spread": "^3.0.0",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.5",
+    "jspdf": "^3.0.1",
     "marked": "^15.0.11",
     "roboto-fontface": "*",
     "tiny-emitter": "^2.1.0",
