--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -259,7 +259,7 @@ SAFEBROWSING_THREATTYPES = ['MALWARE']
 # HASHR_ADD_SOURCE_ATTRIBUTE = True
 
 # Threatintel Yeti analyzer-specific configuration
-# URI root to Yeti's API, e.g. 'https://localhost:8000/api/v2'
+# URI root to Yeti's API, e.g. 'https://localhost:8000'
 YETI_API_ROOT = ''
 
 # API key to authenticate requests
@@ -272,6 +272,10 @@ YETI_TLS_CERTIFICATE = None
 # Labels to narrow down indicator selection
 YETI_INDICATOR_LABELS = ['domain']
 
+# Enable loading DFIQ templates from a Yeti instance.
+# This requires DFIQ_ENABLED to be True and YETI_API_ROOT/YETI_API_KEY to be set.
+# Yeti DFIQ entries will overwrite local entries if they share the same UUID!
+YETI_DFIQ_ENABLED = True
 
 # Url to MISP instance
 MISP_URL = ''
@@ -343,6 +347,7 @@ SIGMA_TAG_DELAY = 5
 
 #-------------------------------------------------------------------------------
 # DFIQ - Digital Forensics Investigation Questions
+# How to set-up DFIQ: https://timesketch.org/guides/admin/load-dfiq/
 DFIQ_ENABLED = False
 DFIQ_PATH = '/etc/timesketch/dfiq/'
 
