dependencies for yeti-python

--- a/dependencies.ini
+++ b/dependencies.ini
@@ -335,6 +335,12 @@ dpkg_name: python3-xmltodict
 minimum_version: 0.12.0
 rpm_name: python3-xmltodict
 
+[yeti-python]
+pypi_name: yeti-python
+dpkg_name: python3-yeti-python
+rpm_name: python3-yeti-python
+minimum_version: 2.0.8
+
 [yaml]
 dpkg_name: python3-yaml
 l2tbinaries_name: PyYAML
