Update yeti analyzer to use the new search with tags method

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -276,7 +276,7 @@ YETI_INDICATOR_LABELS = ['domain']
 # Enable loading DFIQ templates from a Yeti instance.
 # This requires DFIQ_ENABLED to be True and YETI_API_ROOT/YETI_API_KEY to be set.
 # Yeti DFIQ entries will overwrite local entries if they share the same UUID!
-YETI_DFIQ_ENABLED = True
+YETI_DFIQ_ENABLED = False
 
 # Url to MISP instance
 MISP_URL = ''
