Add yeti web root config option

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -260,6 +260,7 @@ SAFEBROWSING_THREATTYPES = ['MALWARE']
 # HASHR_ADD_SOURCE_ATTRIBUTE = True
 
 # Threatintel Yeti analyzer-specific configuration
+# https://yeti-platform.io/
 # URI root to Yeti's API, e.g. 'https://localhost:8000'
 YETI_API_ROOT = ''
 
@@ -277,6 +278,10 @@ YETI_INDICATOR_LABELS = ['domain']
 # This requires DFIQ_ENABLED to be True and YETI_API_ROOT/YETI_API_KEY to be set.
 # Yeti DFIQ entries will overwrite local entries if they share the same UUID!
 YETI_DFIQ_ENABLED = False
+
+# Yeti instance web base URL used for links in the UI.
+# (Falls back to YETI_API_ROOT if not set.)
+YETI_WEB_ROOT = ''
 
 # Url to MISP instance
 MISP_URL = ''
