DFIQv2 and Yeti Analyzer Refactor (#3501)
* refactor of the dfiq component to support imports directly from yeti

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -260,7 +260,8 @@ SAFEBROWSING_THREATTYPES = ['MALWARE']
 # HASHR_ADD_SOURCE_ATTRIBUTE = True
 
 # Threatintel Yeti analyzer-specific configuration
-# URI root to Yeti's API, e.g. 'https://localhost:8000/api/v2'
+# https://yeti-platform.io/
+# URI root to Yeti's API, e.g. 'https://localhost:8000'
 YETI_API_ROOT = ''
 
 # API key to authenticate requests
@@ -273,6 +274,14 @@ YETI_TLS_CERTIFICATE = None
 # Labels to narrow down indicator selection
 YETI_INDICATOR_LABELS = ['domain']
 
+# Enable loading DFIQ templates from a Yeti instance.
+# This requires DFIQ_ENABLED to be True and YETI_API_ROOT/YETI_API_KEY to be set.
+# Yeti DFIQ entries will overwrite local entries if they share the same UUID!
+YETI_DFIQ_ENABLED = False
+
+# Yeti instance web base URL used for links in the UI.
+# (Falls back to YETI_API_ROOT if not set.)
+YETI_WEB_ROOT = ''
 
 # Url to MISP instance
 MISP_URL = ''
@@ -344,6 +353,7 @@ SIGMA_TAG_DELAY = 5
 
 #-------------------------------------------------------------------------------
 # DFIQ - Digital Forensics Investigation Questions
+# How to set-up DFIQ: https://timesketch.org/guides/admin/load-dfiq/
 DFIQ_ENABLED = False
 DFIQ_PATH = '/etc/timesketch/dfiq/'
 
