refactor secgemini provider & log analyzer feature

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -415,8 +415,10 @@ LLM_PROVIDER_CONFIGS = {
         # a dedicated log analyzer agent service!
         # Read more: https://timesketch.org/developers/log-analyzer-agent/
         'secgemini_log_analyzer_agent': {
-            'server_url': '',
-            'api_key': '',
+            'logs_processor_api_url': 'https://logs-processor-693234985864.us-central1.run.app',
+            'api_key': 'p9903A-QA55-6AJC-SMTL-BF6E',
+            'model': 'sec-gemini-experimental'
+            
         }
     }
 }
