--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -84,3 +84,81 @@ jobs:
       - name: Dump docker logs on failure
         if: failure()
         uses: jwalton/gh-docker-logs@v2
+
+  # Ubuntu 24.04
+  PyPi-plaso-stable-opensearch-v1-ubuntu2404:
+    runs-on: ubuntu-24.04
+    timeout-minutes: 30
+    strategy:
+      matrix:
+        os: [ubuntu-24.04]
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
+      - name: Set up infrastructure with docker compose
+        run: docker compose -f docker/e2e/docker-compose.yml up -d
+        env:
+          UBUNTU_VERSION: 24.04
+          OPENSEARCH_VERSION: 1.3.10
+          PLASO_PPA_TRACK: stable
+      - name: Run e2e tests
+        run: docker compose -f docker/e2e/docker-compose.yml exec -T timesketch python3 /usr/local/src/timesketch/end_to_end_tests/tools/run_in_container.py
+      - name: Dump docker logs on failure
+        if: failure()
+        uses: jwalton/gh-docker-logs@v2
+  PyPi-plaso-staging-opensearch-v1-ubuntu2404:
+    runs-on: ubuntu-24.04
+    timeout-minutes: 30
+    strategy:
+      matrix:
+        os: [ubuntu-24.04]
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
+      - name: Set up infrastructure with docker compose
+        run: docker compose -f docker/e2e/docker-compose.yml up -d
+        env:
+          UBUNTU_VERSION: 24.04
+          OPENSEARCH_VERSION: 1.3.10
+          PLASO_PPA_TRACK: staging
+      - name: Run e2e tests
+        run: docker compose -f docker/e2e/docker-compose.yml exec -T timesketch python3 /usr/local/src/timesketch/end_to_end_tests/tools/run_in_container.py
+      - name: Dump docker logs on failure
+        if: failure()
+        uses: jwalton/gh-docker-logs@v2
+  PyPi-plaso-stable-opensearch-v2-ubuntu2404:
+    runs-on: ubuntu-24.04
+    timeout-minutes: 30
+    strategy:
+      matrix:
+        os: [ubuntu-24.04]
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
+      - name: Set up infrastructure with docker compose
+        run: docker compose -f docker/e2e/docker-compose.yml up -d
+        env:
+          UBUNTU_VERSION: 24.04
+          OPENSEARCH_VERSION: 2.15.0
+          PLASO_PPA_TRACK: stable
+      - name: Run e2e tests
+        run: docker compose -f docker/e2e/docker-compose.yml exec -T timesketch python3 /usr/local/src/timesketch/end_to_end_tests/tools/run_in_container.py
+      - name: Dump docker logs on failure
+        if: failure()
+        uses: jwalton/gh-docker-logs@v2
+  PyPi-plaso-staging-opensearch-v2-ubuntu2404:
+    runs-on: ubuntu-24.04
+    timeout-minutes: 30
+    strategy:
+      matrix:
+        os: [ubuntu-24.04]
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
+      - name: Set up infrastructure with docker compose
+        run: docker compose -f docker/e2e/docker-compose.yml up -d
+        env:
+          UBUNTU_VERSION: 24.04
+          OPENSEARCH_VERSION: 2.15.0
+          PLASO_PPA_TRACK: staging
+      - name: Run e2e tests
+        run: docker compose -f docker/e2e/docker-compose.yml exec -T timesketch python3 /usr/local/src/timesketch/end_to_end_tests/tools/run_in_container.py
+      - name: Dump docker logs on failure
+        if: failure()
+        uses: jwalton/gh-docker-logs@v2
