--- a/docker/e2e/docker-compose.yml
+++ b/docker/e2e/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       dockerfile: ./docker/e2e/Dockerfile
       args:
         - UBUNTU_VERSION=${UBUNTU_VERSION:-22.04}
-        - PLASO_PPA_TRACK=${PLASO_PPA_TRACK}
+        - PLASO_PPA_TRACK=${PLASO_PPA_TRACK:-stable}
     ports:
       - "127.0.0.1:80:80"
     links:
@@ -30,7 +30,7 @@ services:
       - ../../:/usr/local/src/timesketch/
 
   opensearch:
-    image: opensearchproject/opensearch:${OPENSEARCH_VERSION}
+    image: opensearchproject/opensearch:${OPENSEARCH_VERSION:-2.15.0}
     restart: always
     environment:
       - TAKE_FILE_OWNERSHIP=1
