Enable certificate support for opensearch

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -32,6 +32,7 @@ OPENSEARCH_USER = None
 OPENSEARCH_PASSWORD = None
 OPENSEARCH_SSL = False
 OPENSEARCH_VERIFY_CERTS = True
+OPENSEARCH_CA_CERTS = None
 OPENSEARCH_TIMEOUT = 10
 OPENSEARCH_FLUSH_INTERVAL = 5000
 OPENSEARCH_INDEX_WAIT_TIMEOUT = 10
