--- a/docker/e2e/docker-compose.yml
+++ b/docker/e2e/docker-compose.yml
@@ -17,8 +17,8 @@ services:
       context: ../../
       dockerfile: ./docker/e2e/Dockerfile
       args:
-        - UBUNTU_VERSION=${UBUNTU_VERSION:-22.04}
-        - PLASO_PPA_TRACK=${PLASO_PPA_TRACK:-stable}
+          UBUNTU_VERSION: ${UBUNTU_VERSION:-22.04}
+          PLASO_PPA_TRACK: ${PLASO_PPA_TRACK:-stable}
     ports:
       - "127.0.0.1:80:80"
     links:
