* adding UX loading trick * pass error messages to the analyzer for handling * pass full llm response to the analyzer level for handling * add information to a story for easier debugging

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -412,11 +412,11 @@ LLM_PROVIDER_CONFIGS = {
         # NOTE: This feature will not work with default LLM providers and requires
         # a dedicated log analyzer agent service!
         # Read more: https://timesketch.org/developers/log-analyzer-agent/
+        # Did you install `pip3 install sec-gemini` in your Timesketch containers?
         'secgemini_log_analyzer_agent': {
             'logs_processor_api_url': '',
             'api_key': '',
             'model': 'sec-gemini-experimental'
-            
         }
     },
     'default': {
