Support Sec-Gemini log analysis agent: Refactor log_analyzer feature & sec-gemini provider (#3536)
* refactor secgemini provider & log analyzer feature
* Update sec-gemini provider & log_analyzer feature
* Adding some additional logging and optimizations.
* improve frontend UX for long running analysis sessions
* pass error messages to the analyzer for handling
* pass full llm response to the analyzer level for handling
* add information to a story for easier debugging
* adding execution time to story for better metrics

---------

Co-authored-by: janosch <99879757+jkppr@users.noreply.github.com>

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -380,7 +380,10 @@ LLM_PROVIDER_CONFIGS = {
     #      under environment:
     #      GOOGLE_APPLICATION_CREDENTIALS=/usr/local/src/timesketch/<key_file>.json
     #   3. Install the python libraries: $ pip3 install google-cloud-aiplatform
-    #
+    # - secgemini_log_analyzer_agent: SecGemini Log Analyzer Agent.
+    #   To use the SecGemini Log Analyzer Agent you need to:
+    #   1. Obtain an API key from https://secgemini.com/
+    #   2. pip3 install sec-gemini
     #   IMPORTANT: Private keys must be kept secret. If you expose your private key it is
     #   recommended to revoke it immediately from the Google Cloud Console.
     # - aistudio: Google AI Studio (API key).  Get API key from Google AI Studio website.
@@ -404,21 +407,23 @@ LLM_PROVIDER_CONFIGS = {
             'api_key': '',
         },
     },
+    'log_analyzer':
+    {
+        # NOTE: This feature will not work with default LLM providers and requires
+        # a dedicated log analyzer agent service!
+        # Read more: https://timesketch.org/developers/log-analyzer-agent/
+        # Did you install `pip3 install sec-gemini` in your Timesketch containers?
+        'secgemini_log_analyzer_agent': {
+            'logs_processor_api_url': '',
+            'api_key': '',
+            'model': 'sec-gemini-experimental'
+        }
+    },
     'default': {
         'ollama': {
             'server_url': '',
             'model': '',
         },
-    },
-    'log_analyzer':
-    {
-        # NOTE: This feature will not work with default LLM proiders and requires
-        # a dedicated log analyzer agent service!
-        # Read more: https://timesketch.org/developers/log-analyzer-agent/
-        'secgemini_log_analyzer_agent': {
-            'server_url': '',
-            'api_key': '',
-        }
     }
 }
 
