--- a/docker/e2e/Dockerfile
+++ b/docker/e2e/Dockerfile
@@ -25,7 +25,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN add-apt-repository -y ppa:gift/$PLASO_PPA_TRACK
 RUN apt-get update && apt-get install -y --no-install-recommends \
   plaso-tools \
-  python3-events \
   && rm -rf /var/lib/apt/lists/*
 
 RUN pip3 show opensearch-py
@@ -33,7 +32,10 @@ RUN python3 -c "import opensearchpy"
 RUN python3 -c "import opensearchpy; print(f'OpenSearchPy version for Plaso')"
 RUN echo 'AAAAAAAAAAAAAAA Only for debugging purposes'
 # Install opensearch-py globally for Plaso to find it                                  │
-#RUN pip3 install opensearch-py==2.6.0  
+# Fix for broken PPA dependency: Plaso needs the 'events' library for its              │
+# opensearch output module, but the python3-opensearch package is missing              │
+# this dependency. We install it globally for the system Python.                       │
+RUN pip3 install --break-system-packages events
 
 RUN dpkg -s plaso-tools
 RUN psort.py --version
