--- a/docker/e2e/docker-compose.yml
+++ b/docker/e2e/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - REDIS_PORT=6379
       - TIMESKETCH_USER=test
       - TIMESKETCH_PASSWORD=test
+      - TIMESKETCH_ADMIN_USER=admin
+      - TIMESKETCH_ADMIN_USER_PASSWORD=admin
       - TIMESKETCH_USER2=test2
       - TIMESKETCH_PASSWORD2=test2
     build:
