modify the Dockerfile to make the installation of opensearch-py==3.0.0   conditional on both PLASO_PPA_TRACK being staging AND the Ubuntu version being 24.04

--- a/docker/e2e/Dockerfile
+++ b/docker/e2e/Dockerfile
@@ -39,8 +39,9 @@ RUN if [ "$UBUNTU_VERSION" = "24.04" ]; then \
   echo '24.04 detected';  \
   pip3 install --break-system-packages events; \ 
   fi
-RUN if [ "$PLASO_PPA_TRACK" = "staging" ]; then \
-  echo 'Plaso staging detected, installing opensearch-py==3.0.0'; \
+
+RUN if [ "$PLASO_PPA_TRACK" = "staging" ] && [ "$UBUNTU_VERSION" = "24.04" ]; then \
+  echo 'Plaso staging on Ubuntu 24.04 detected, installing opensearch-py==3.0.0'; \
   pip3 install --break-system-packages opensearch-py==3.0.0; \
   fi
 
