--- a/timesketch/frontend-ng/package.json
+++ b/timesketch/frontend-ng/package.json
@@ -37,7 +37,6 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.9",
     "@vue/cli-plugin-eslint": "^5.0.9",
-    "@vue/cli-plugin-unit-mocha": "^5.0.9",
     "@vue/cli-service": "^5.0.9",
     "@vue/compiler-sfc": "^3.3.11",
     "@vue/eslint-config-standard": "^4.0.0",
@@ -45,14 +44,16 @@
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
     "deepmerge": "^4.2.2",
-    "eslint": "^5.8.0",
+    "eslint": "^7.5.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^7.0.0",
     "happy-dom": "^15.10.2",
     "sass": "1.77.6",
     "sass-loader": "^10.1.1",
+    "vite": "^4.0.0",
     "vite-plugin-vue2": "^2.0.3",
     "vitest": "~1.6.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.102.1"
   }
 }
