--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -7,11 +7,13 @@ services:
       - 127.0.0.1:5000:5000
       - 127.0.0.1:5001:5001
       - 127.0.0.1:8080:8080
-    links:
-      - opensearch
-      - postgres
-      - redis
-      - notebook
+    depends_on:
+      postgres:
+        condition: service_healthy
+      opensearch:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       - POSTGRES_USER=timesketch
       - POSTGRES_PASSWORD=password
@@ -25,7 +27,6 @@ services:
       - TIMESKETCH_PASSWORD=dev
       - CHOKIDAR_USEPOLLING=true
       - PROMETHEUS_MULTIPROC_DIR=/tmp/
-
     restart: always
     volumes:
       - ../../:/usr/local/src/timesketch/
@@ -41,7 +42,6 @@ services:
       - "OPENSEARCH_JAVA_OPTS=-Xms2g -Xmx2g"
       - "DISABLE_INSTALL_DEMO_CONFIG=true"
       - "DISABLE_SECURITY_PLUGIN=true" # TODO: Enable when we have migrated the python client to Opensearch as well.
-
     ulimits:
       memlock:
         soft: -1
@@ -49,6 +49,12 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+    healthcheck:
+      # Use curl to check the cluster health API. It's healthy when it returns a 200 OK.
+      test: ["CMD", "curl", "-f", "http://localhost:9200/_cluster/health?wait_for_status=yellow&timeout=50s"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
 
   postgres:
     container_name: postgres
@@ -57,23 +63,24 @@ services:
       - POSTGRES_USER=timesketch
       - POSTGRES_PASSWORD=password
     restart: always
+    healthcheck:
+      # Use the built-in postgres tool to check if the server is ready.
+      test: ["CMD-SHELL", "pg_isready -U timesketch -d postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   redis:
     container_name: redis
     image: redis:7.2.11-alpine
     restart: always
+    healthcheck:
+      # Use the redis CLI to send a PING command. It's healthy if it gets a PONG.
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
-  notebook:
-    container_name: notebook
-    image: us-docker.pkg.dev/osdfir-registry/timesketch/notebook:latest
-    ports:
-      - 127.0.0.1:8844:8844
-    restart: on-failure
-    links:
-      - opensearch
-    volumes:
-      - ../../:/usr/local/src/timesketch/:ro
-      - /tmp/:/usr/local/src/picadata/
   prometheus:
     container_name: prometheus
     image: prom/prometheus:v2.24.1
@@ -82,3 +89,15 @@ services:
     ports:
       - 127.0.0.1:9090:9090
     command: --config.file=/etc/prometheus/prometheus.yml
+
+  # notebook:
+  #   container_name: notebook
+  #   image: us-docker.pkg.dev/osdfir-registry/timesketch/notebook:latest
+  #   ports:
+  #     - 127.0.0.1:8844:8844
+  #   restart: on-failure
+  #   links:
+  #     - opensearch
+  #   volumes:
+  #     - ../../:/usr/local/src/timesketch/:ro
+  #     - /tmp/:/usr/local/src/picadata/
