--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -2,6 +2,9 @@
 
 # Show debug information.
 # Note: It is a security risk to have this enabled in production.
+# Enabling this will also activate performance profiling for all backend requests.
+# Profiling data will be written as .prof files to a `profiles/` directory
+# in either the project root (dev) or /var/log/timesketch/ (release).
 DEBUG = False
 
 # Key for signing cookies and for CSRF protection.
