Upgrade Docker development environment to Ubuntu 24.04 (#3567)
* Bump docker image build for latest to ubuntu 24.04.
* Update timesketch dev container to use ubuntu 2404
* Update docker-compose for dev container to handle boot order.
* Add health checks to the release docker-compose file.
* simplify docker-compose dependencies
* test for postgres system db
* Make nginx dependency on legacy or v3 UI optional since they are not started by default.
* Adding vim

--- a/docker/release/docker-compose.yml
+++ b/docker/release/docker-compose.yml
@@ -1,3 +1,13 @@
+# Timesketch container dependencies
+x-timesketch-dependencies: &timesketch-dependencies
+  depends_on:
+    opensearch:
+      condition: service_healthy
+    postgres:
+      condition: service_healthy
+    redis:
+      condition: service_healthy
+
 services:
   timesketch-web:
     container_name: timesketch-web
@@ -10,6 +20,7 @@ services:
       - ${TIMESKETCH_CONFIG_PATH}:/etc/timesketch/
       - ${TIMESKETCH_UPLOAD_PATH}:/usr/share/timesketch/upload/
       - ${TIMESKETCH_LOGS_PATH}:/var/log/timesketch/
+    <<: *timesketch-dependencies
 
   # [DEPRECATED] Add "--profile legacy-ui" to your docker compose command to use the legacy UI
   timesketch-web-legacy:
@@ -25,6 +36,7 @@ services:
       - ${TIMESKETCH_CONFIG_PATH}:/etc/timesketch/
       - ${TIMESKETCH_UPLOAD_PATH}:/usr/share/timesketch/upload/
       - ${TIMESKETCH_LOGS_PATH}:/var/log/timesketch/
+    <<: *timesketch-dependencies
 
   # [WIP] Add "--profile v3-ui" to your docker compose command to use the vue3 UI
   timesketch-web-v3:
@@ -40,6 +52,7 @@ services:
       - ${TIMESKETCH_CONFIG_PATH}:/etc/timesketch/
       - ${TIMESKETCH_UPLOAD_PATH}:/usr/share/timesketch/upload/
       - ${TIMESKETCH_LOGS_PATH}:/var/log/timesketch/
+    <<: *timesketch-dependencies
 
   timesketch-worker:
     container_name: timesketch-worker
@@ -52,6 +65,7 @@ services:
       - ${TIMESKETCH_CONFIG_PATH}:/etc/timesketch/
       - ${TIMESKETCH_UPLOAD_PATH}:/usr/share/timesketch/upload/
       - ${TIMESKETCH_LOGS_PATH}:/var/log/timesketch/
+    <<: *timesketch-dependencies
 
   opensearch:
     container_name: opensearch
@@ -72,6 +86,11 @@ services:
         hard: 65536
     volumes:
       - ${OPENSEARCH_DATA_PATH}:/usr/share/opensearch/data/
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200/_cluster/health?wait_for_status=yellow&timeout=50s"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
 
   postgres:
     container_name: postgres
@@ -82,12 +101,22 @@ services:
     restart: always
     volumes:
       - ${POSTGRES_DATA_PATH}:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U timesketch -d postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   redis:
     container_name: redis
     image: redis:${REDIS_VERSION}
     command: "redis-server"
     restart: always
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   nginx:
     container_name: nginx
@@ -98,4 +127,8 @@ services:
       - ${NGINX_HTTPS_PORT}:443
     volumes:
       - ${NGINX_CONFIG_PATH}:/etc/nginx/nginx.conf
-
+    depends_on:
+      # Nginx should wait for the web backends to be started.
+      - timesketch-web
+      # - timesketch-web-legacy
+      # - timesketch-web-v3
