--- a/docker/e2e/Dockerfile
+++ b/docker/e2e/Dockerfile
@@ -40,6 +40,11 @@ RUN if [ "$UBUNTU_VERSION" = "24.04" ]; then \
   pip3 install --break-system-packages events; \ 
   fi
 
+RUN if [ "$PLASO_PPA_TRACK" = "staging" ] && [ "$UBUNTU_VERSION" = "24.04" ]; then \
+  echo 'Plaso staging on Ubuntu 24.04 detected, installing opensearch-py==3.0.0'; \
+  pip3 install --break-system-packages opensearch-py==3.0.0; \
+  fi
+
 # Some information for e2e test debugging in case something goes wrong
 RUN pip3 show opensearch-py
 RUN dpkg -s plaso-tools
