--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -35,8 +35,8 @@ jobs:
           pip install cli_client/python
       - name: Run pylint
         run: |
-          git config pull.rebase false && git fetch -p origin master
-          for FILE in `git --no-pager diff origin/master --name-only --diff-filter=ACMR | grep \.py$`; do echo "Running pylint against ${FILE}"; pylint --rcfile=.pylintrc ${FILE}; done
+          git config pull.rebase false && git fetch -p origin main
+          for FILE in `git --no-pager diff origin/main --name-only --diff-filter=ACMR | grep \.py$`; do echo "Running pylint against ${FILE}"; pylint --rcfile=.pylintrc ${FILE}; done
 
   Black-formatter:
     runs-on: ubuntu-latest
@@ -70,5 +70,5 @@ jobs:
         run: yarn add eslint@5.16.0
       - name: Run eslint
         run: |
-          git config pull.rebase false && git fetch -p origin master
-          for FILE in `git --no-pager diff origin/master --name-only --diff-filter=ACMR | grep -e \.vue$ -e \.js$ | grep -v dist\/js | grep ^timesketch\/frontend-ng\/ | sed s/'^timesketch\/frontend-ng\/'/''/`; do echo "Running eslint against ${FILE}"; yarn run eslint ${FILE}; done
+          git config pull.rebase false && git fetch -p origin main
+          for FILE in `git --no-pager diff origin/main --name-only --diff-filter=ACMR | grep -e \.vue$ -e \.js$ | grep -v dist\/js | grep ^timesketch\/frontend-ng\/ | sed s/'^timesketch\/frontend-ng\/'/''/`; do echo "Running eslint against ${FILE}"; yarn run eslint ${FILE}; done
