fix: make staging tests for plaso 24.04 for now optional (#3583)
* mark 24.04 plaso staging optional

* fix

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -106,6 +106,7 @@ jobs:
         if: failure()
         uses: jwalton/gh-docker-logs@v2
   PyPi-plaso-staging-opensearch-v1-ubuntu2404:
+    continue-on-error: true
     runs-on: ubuntu-24.04
     timeout-minutes: 30
     strategy:
@@ -144,6 +145,7 @@ jobs:
         if: failure()
         uses: jwalton/gh-docker-logs@v2
   PyPi-plaso-staging-opensearch-v2-ubuntu2404:
+    continue-on-error: true
     runs-on: ubuntu-24.04
     timeout-minutes: 30
     strategy:
